--- a/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
+++ b/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
@@ -759,7 +759,7 @@
                 <div t-field="doc.ksa_note"/>
             </t>
         </div>
-        <div class="col-8" style="margin: 0 auto; text-align: center;">
+        <div class="col-8" style="margin: 0 auto; text-align: left;">
             <table class="second_table total_table" width="100%">
                                         <col style="width:25%"/>
                                         <col style="width:55%"/>
