--- a/custom-addons/pos_multi_uom/views/views.xml
+++ b/custom-addons/pos_multi_uom/views/views.xml
@@ -97,8 +97,9 @@
 
         <!-- Menu Item Definition -->
         <menuitem id="menu_product_product_tree"
-                  name="Products"
+                  name="الوحدات المتعددة"
                   action="action_product_product_tree"
+                  parent="sale.product_menu_catalog"
                   sequence="10"/>
 
     </data>
