--- a/custom-addons/pos_multi_barcodes_editing/views/views.xml
+++ b/custom-addons/pos_multi_barcodes_editing/views/views.xml
@@ -12,6 +12,7 @@
                     <field name="name"/>
                     <field name="unit" required="True"/>
                     <field name="price"/>
+                    <field name="product_id"/>
                 </tree>
             </field>
         </record>
