--- a/custom-addons/pos_multi_barcodes/views/views.xml
+++ b/custom-addons/pos_multi_barcodes/views/views.xml
@@ -13,7 +13,7 @@
                                 <field name="name"/>
                                 <field name="qty"/>
                                 <field name="price"/>
-                                <field name="unit_bar"/>
+                                <field name="unit"/>
                             </tree>
                         </field>
                     </page>
