--- a/custom-addons/pos_multi_barcodes/views/views.xml
+++ b/custom-addons/pos_multi_barcodes/views/views.xml
@@ -14,6 +14,7 @@
                                 <field name="qty"/>
                                 <field name="price"/>
                                 <field name="unit"/>
+                                 <field name="Ratio"/>
                                  <field name="cost"/>
                             </tree>
                         </field>
