--- a/custom-addons/pos_multi_barcodes/views/views.xml
+++ b/custom-addons/pos_multi_barcodes/views/views.xml
@@ -29,6 +29,7 @@
                 <xpath expr="//field[@name='lines']/tree/field[@name='full_product_name']" position="after">
                     <field name="product_uom"/>
                      <field name="Ratio"/>
+                     <field name="total_cost"/>
                 </xpath>
             </field>
         </record>
