--- a/custom-addons/em_pos_multi_uom/views/views.xml
+++ b/custom-addons/em_pos_multi_uom/views/views.xml
@@ -56,8 +56,57 @@
         </record>
 
 
-      
+                <!-- test -->
+        <!-- Inherit the existing product.product.tree view -->
+        <record id="product_product_tree_view_inherit" model="ir.ui.view">
+            <field name="name">product.product.tree.inherit.multi.uom</field>
+            <field name="model">product.product</field>
+            <field name="inherit_id" ref="product.product_template_tree_view"/>
+            <field name="arch" type="xml">
+                <!-- Use xpath to locate the position after the 'name' field -->
+                <xpath expr="//field[@name='name']" position="after">
+                    <field name='has_multi_uom' />
+                </xpath>
+            </field>
+        </record>
 
+
+
+        <!-- tessssst-->
+
+
+
+
+
+        <!-- Tree View Definition -->
+        <record model="ir.ui.view" id="product_product_tree_view">
+            <field name="name">product.product.tree.view</field>
+            <field name="model">product.multi.uom</field>
+            <field name="arch" type="xml">
+                <tree editable="bottom">
+                    <field name="product_id"/>
+                    <field name="multi_uom_id" required="True"/>
+                    <field name="sequence"/>
+                    <field name="price"/>
+                </tree>
+            </field>
+        </record>
+
+        <!-- Action Definition -->
+        <record id="action_product_product_tree" model="ir.actions.act_window">
+            <field name="name">Products</field>
+            <field name="res_model">product.multi.uom</field>
+            <field name="view_mode">tree,form</field>
+            <field name="view_id" ref="product_product_tree_view"/>
+        </record>
+
+        <!-- Menu Item Definition -->
+        <menuitem id="menu_product_product_tree"
+                  name="الوحدات المتعددة "
+                  action="action_product_product_tree"
+                  parent="sale.product_menu_catalog"
+                  sequence="10"/>
+        
 
     </data>
 </odoo>
