--- a/custom-addons/em_pos_multi_uom/views/views.xml
+++ b/custom-addons/em_pos_multi_uom/views/views.xml
@@ -84,7 +84,7 @@
             <field name="model">product.multi.uom</field>
             <field name="arch" type="xml">
                 <tree editable="bottom">
-                    <field name="product_id"/>
+                    <field name="product_tmp_id"/>
                     <field name="multi_uom_id" required="True"/>
                     <field name="sequence"/>
                     <field name="price"/>
@@ -106,7 +106,7 @@
                   action="action_product_product_tree"
                   parent="sale.product_menu_catalog"
                   sequence="10"/>
-        
+
 
     </data>
 </odoo>
