--- a/custom-addons/em_pos_multi_uom/views/views.xml
+++ b/custom-addons/em_pos_multi_uom/views/views.xml
@@ -56,6 +56,30 @@
         </record>
 
 
+         <record id="view_move_form_inherit_product_uom" model="ir.ui.view">
+            <field name="name">account.move.line.form.product.uom</field>
+            <field name="model">account.move.line</field>
+            <field name="inherit_id" ref="account.view_move_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='product_id']" position="after">
+                    <field name="product_uom"/>
+                </xpath>
+            </field>
+        </record>
+
+        <!-- Account Move Line Tree View -->
+        <record id="view_move_line_tree_inherit_product_uom" model="ir.ui.view">
+            <field name="name">account.move.line.tree.product.uom</field>
+            <field name="model">account.move.line</field>
+            <field name="inherit_id" ref="account.view_move_line_tree"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='product_id']" position="after">
+                    <field name="product_uom"/>
+                </xpath>
+            </field>
+        </record>
+
+
                 <!-- test -->
         <!-- Inherit the existing product.product.tree view -->
         <record id="product_product_tree_view_inherit" model="ir.ui.view">
