--- a/custom-addons/em_pos_multi_uom/views/views.xml
+++ b/custom-addons/em_pos_multi_uom/views/views.xml
@@ -55,11 +55,10 @@
             </field>
         </record>
 
-
-         <record id="view_move_form_inherit_product_uom" model="ir.ui.view">
+         <record id="view_invoice_line_form_inherit_product_uom" model="ir.ui.view">
             <field name="name">account.move.line.form.product.uom</field>
             <field name="model">account.move.line</field>
-            <field name="inherit_id" ref="account.view_move_form"/>
+            <field name="inherit_id" ref="account.view_move_line_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='product_id']" position="after">
                     <field name="product_uom"/>
@@ -67,8 +66,8 @@
             </field>
         </record>
 
-        <!-- Account Move Line Tree View -->
-        <record id="view_move_line_tree_inherit_product_uom" model="ir.ui.view">
+        <!-- Invoice Line Tree View -->
+        <record id="view_invoice_line_tree_inherit_product_uom" model="ir.ui.view">
             <field name="name">account.move.line.tree.product.uom</field>
             <field name="model">account.move.line</field>
             <field name="inherit_id" ref="account.view_move_line_tree"/>
@@ -78,6 +77,8 @@
                 </xpath>
             </field>
         </record>
+
+
 
 
                 <!-- test -->
