--- a/custom-addons/em_pos_multi_uom/views/views.xml
+++ b/custom-addons/em_pos_multi_uom/views/views.xml
@@ -51,6 +51,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='lines']/tree/field[@name='full_product_name']" position="after">
                     <field name="product_uom"/>
+                     <field name="Ratio"/>
                 </xpath>
             </field>
         </record>
