--- a/custom-addons/em_pos_multi_uom/views/views.xml
+++ b/custom-addons/em_pos_multi_uom/views/views.xml
@@ -57,28 +57,31 @@
         </record>
 
          <!-- Invoice Line Form View -->
-        <record id="view_invoice_line_form_inherit_product_uom" model="ir.ui.view">
-            <field name="name">account.move.line.form.product.uom</field>
-            <field name="model">account.move.line</field>
-            <field name="inherit_id" ref="account.view_move_line_form"/>
-            <field name="arch" type="xml">
-                <xpath expr="//field[@name='product_id']" position="after">
+        <record id="view_move_form" model="ir.ui.view">
+        <field name="name">account.move.line.form</field>
+        <field name="model">account.move.line</field>
+        <field name="arch" type="xml">
+            <form string="Journal Entry Line">
+                <group>
+                    <field name="product_id"/>
                     <field name="product_uom"/>
-                </xpath>
-            </field>
-        </record>
+                    <!-- Add other fields here as needed -->
+                </group>
+            </form>
+        </field>
+    </record>
 
-        <!-- Invoice Line Tree View -->
-        <record id="view_invoice_line_tree_inherit_product_uom" model="ir.ui.view">
-            <field name="name">account.move.line.tree.product.uom</field>
-            <field name="model">account.move.line</field>
-            <field name="inherit_id" ref="account.view_move_line_tree"/>
-            <field name="arch" type="xml">
-                <xpath expr="//field[@name='product_id']" position="after">
-                    <field name="product_uom"/>
-                </xpath>
-            </field>
-        </record>
+    <record id="view_move_tree" model="ir.ui.view">
+        <field name="name">account.move.line.tree</field>
+        <field name="model">account.move.line</field>
+        <field name="arch" type="xml">
+            <tree string="Journal Entry Lines">
+                <field name="product_id"/>
+                <field name="product_uom"/>
+                <!-- Add other fields here as needed -->
+            </tree>
+        </field>
+    </record>
 
 
 
