--- a/custom-addons/em_pos_multi_uom/views/views.xml
+++ b/custom-addons/em_pos_multi_uom/views/views.xml
@@ -56,17 +56,17 @@
             </field>
         </record>
 
-        <record id="view_account_move_line_form_inherit" model="ir.ui.view">
-            <field name="name">account.move.line.form.inherit</field>
-            <field name="model">account.move.line</field>
-            <field name="inherit_id" ref="account.view_move_line_form"/>
-            <field name="arch" type="xml">
-                <xpath expr="//field[@name='product_id']" position="after">
-                    <!-- Insert your product_uom field here -->
-                    <field name="product_uom"/>
-                </xpath>
-            </field>
-        </record>
+        <record id="view_move_form_inherit-uom" model="ir.ui.view">
+            <field name="name">account.move.form.inherit.uom</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_move_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='invoice_line_ids']/tree//field[@name='discount']" position="after">
+                <field name="product_uom" />
+            </xpath>
+
+        </field>
+    </record>
 
 
                 <!-- test -->
