--- a/custom-addons/em_pos_multi_uom/views/views.xml
+++ b/custom-addons/em_pos_multi_uom/views/views.xml
@@ -57,6 +57,21 @@
         </record>
 
 
+        <record id="view_move_form_inheritt" model="ir.ui.view">
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_move_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='invoice_line_ids']/tree//field[@name='discount']" position="after">
+                <field name="product_uom_id" />
+            </xpath>
+
+
+        </field>
+    </record>
+
+
+
+
 
 
 
