--- a/custom-addons/em_pos_multi_uom/views/views.xml
+++ b/custom-addons/em_pos_multi_uom/views/views.xml
@@ -55,19 +55,26 @@
                 </xpath>
             </field>
         </record>
+        
 
+        <!-- Extend the view for account.move.line -->
+        <record id="view_account_move_line_form_inherit" model="ir.ui.view">
+            <field name="name">account.move.line.form.inherit</field>
+            <field name="model">account.move.line</field>
+            <field name="inherit_id" ref="account.view_move_line_form"/> <!-- Replace with the actual XML ID of the view -->
+            <field name="arch" type="xml">
+                <xpath expr="//form/sheet/group" position="inside">
+                    <!-- Add or modify fields here -->
+                    <field name="name"/>
+                    <field name="product_id"/>
+                    <field name="quantity"/>
+                    <field name="price_unit"/>
+                    <field name="product_uom_id"/>
+                    <!-- Add more fields as needed -->
+                </xpath>
+            </field>
+        </record>
 
-        <record id="view_move_form_inheritt" model="ir.ui.view">
-        <field name="model">account.move</field>
-        <field name="inherit_id" ref="account.view_move_form"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='invoice_line_ids']/tree//field[@name='discount']" position="after">
-                <field name="product_uom_id" />
-            </xpath>
-
-
-        </field>
-    </record>
 
 
 
